--- a/app/src/main/res/layout/fragment_single_tv_show.xml
+++ b/app/src/main/res/layout/fragment_single_tv_show.xml
@@ -8,8 +8,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingStart="@dimen/edit_text_margin"
-            android:paddingEnd="@dimen/edit_text_margin">
+            android:padding="@dimen/edit_text_margin">
 
         <TextView
                 android:id="@+id/single_tv_title"
@@ -17,8 +16,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/home_text"
                 android:textSize="35sp"
-                android:gravity="center"
-                android:layout_margin="@dimen/edit_text_margin" />
+                android:gravity="center"/>
 
         <TextView
                 android:id="@+id/single_tv_tagline"
@@ -26,8 +24,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/home_text"
                 android:textSize="25sp"
-                android:gravity="center"
-                android:layout_margin="@dimen/edit_text_margin" />
+                android:gravity="center"/>
 
             <ImageView
                     android:id="@+id/single_tv_image"
@@ -48,28 +45,23 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_margin="@dimen/edit_text_margin">
+                android:orientation="horizontal">
 
             <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/ratting"
-                    android:paddingTop="4dp" />
+                    android:paddingTop="4dp"
+                    android:textStyle="bold"/>
 
-            <RatingBar
-                    android:id="@+id/single_tv_rating_bar"
+            <TextView
+                    android:id="@+id/single_tv_rating"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    style="@android:style/Widget.DeviceDefault.RatingBar.Small"
-                    android:numStars="10"
-                    android:isIndicator="true"
-                    android:paddingTop="8dp"
-                    android:layout_marginEnd="@dimen/edit_text_top_margin"
-                    android:rating="0.0"
-                    android:stepSize="0.5" />
+                    android:layout_weight="1"
+                    android:text="@string/home_text"
+                    app:drawableStartCompat="@drawable/ratting_ic"/>
 
         </LinearLayout>
 
@@ -77,13 +69,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="@dimen/edit_text_margin">
+                android:layout_marginTop="@dimen/edit_text_margin">
 
             <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/r_year" />
+                    android:text="@string/r_year"
+                    android:textStyle="bold"/>
 
             <TextView
                     android:id="@+id/tv_release_year"
@@ -98,13 +91,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="@dimen/edit_text_margin">
+                android:layout_marginTop="@dimen/edit_text_margin">
 
             <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/episode_runtime" />
+                    android:text="@string/episode_runtime"
+                    android:textStyle="bold"/>
 
             <TextView
                     android:id="@+id/tv_episode_runtime"
@@ -119,13 +113,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="@dimen/edit_text_margin">
+                android:layout_marginTop="@dimen/edit_text_margin">
 
             <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/game_genre" />
+                    android:text="@string/game_genre"
+                    android:textStyle="bold"/>
 
             <TextView
                     android:id="@+id/tv_genre"
@@ -140,13 +135,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="@dimen/edit_text_margin">
+                android:layout_marginTop="@dimen/edit_text_margin">
 
             <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/tv_episode_num" />
+                    android:text="@string/tv_episode_num"
+                    android:textStyle="bold"/>
 
             <TextView
                     android:id="@+id/tv_episode_count"
@@ -161,13 +157,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="@dimen/edit_text_margin">
+                android:layout_marginTop="@dimen/edit_text_margin">
 
             <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/tv_season_num" />
+                    android:text="@string/tv_season_num"
+                    android:textStyle="bold"/>
 
             <TextView
                     android:id="@+id/tv_season_count"
@@ -182,13 +179,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="@dimen/edit_text_margin">
+                android:layout_marginTop="@dimen/edit_text_margin">
 
             <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/tv_status" />
+                    android:text="@string/tv_status"
+                    android:textStyle="bold"/>
 
             <TextView
                     android:id="@+id/tv_status"
@@ -203,13 +201,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="@dimen/edit_text_margin">
+                android:layout_marginTop="@dimen/edit_text_margin">
 
             <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/tv_type" />
+                    android:text="@string/tv_type"
+                    android:textStyle="bold"/>
 
             <TextView
                     android:id="@+id/tv_type"
@@ -226,93 +225,91 @@
                 android:layout_height="wrap_content"
                 android:text="@string/cast_button"
                 android:drawableEnd="@drawable/arrow_circle_right_ic"
-                android:layout_marginStart="@dimen/edit_text_margin"
-                android:layout_marginEnd="@dimen/edit_text_margin"/>
+                android:layout_marginTop="@dimen/edit_text_margin"/>
 
         <Button
                 android:id="@+id/to_tv_seasons_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/seasons_button"
-                android:drawableEnd="@drawable/arrow_circle_right_ic"
-                android:layout_marginStart="@dimen/edit_text_margin"
-                android:layout_marginEnd="@dimen/edit_text_margin"/>
+                android:drawableEnd="@drawable/arrow_circle_right_ic"/>
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/season_overview"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:layout_marginTop="@dimen/edit_text_margin"/>
 
         <TextView
                 android:id="@+id/tv_overview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/home_text"
-                android:layout_marginStart="@dimen/edit_text_margin"
-                android:layout_marginTop="@dimen/edit_text_margin" />
+                android:text="@string/home_text"/>
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/home_page"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:layout_marginTop="@dimen/edit_text_margin"/>
 
         <TextView
                 android:id="@+id/tv_homepage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/edit_text_margin"
-                android:layout_marginEnd="@dimen/edit_text_margin"
-                android:layout_marginTop="@dimen/edit_text_margin"
-                android:text="@string/home_text"/>
+                android:text="@string/home_text"
+                android:autoLink="web"
+                android:linksClickable="true" />
 
         <TextView
                 android:id="@+id/tv_creator_heading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/edit_text_margin"
-                android:layout_marginStart="@dimen/edit_text_margin"
-                android:layout_marginEnd="@dimen/edit_text_margin"
                 android:textSize="25sp"
+                android:textStyle="bold"
                 android:text="@string/created_by"/>
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/tv_creator_rv"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/edit_text_margin"
-                android:layout_marginEnd="@dimen/edit_text_margin"
-                android:layout_marginBottom="@dimen/edit_text_margin"/>
+                android:layout_height="wrap_content"/>
 
         <TextView
                 android:id="@+id/tv_network_heading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/edit_text_margin"
-                android:layout_marginStart="@dimen/edit_text_margin"
-                android:layout_marginEnd="@dimen/edit_text_margin"
                 android:textSize="25sp"
-                android:text="@string/tv_network"/>
+                android:text="@string/tv_network"
+                android:textStyle="bold"/>
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/tv_network_rv"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/edit_text_margin"
-                android:layout_marginEnd="@dimen/edit_text_margin"
-                android:layout_marginBottom="@dimen/edit_text_margin"/>
+                android:layout_height="wrap_content"/>
 
         <TextView
                 android:id="@+id/tv_production_company_heading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/edit_text_margin"
-                android:layout_marginStart="@dimen/edit_text_margin"
-                android:layout_marginEnd="@dimen/edit_text_margin"
                 android:textSize="25sp"
+                android:textStyle="bold"
                 android:text="@string/tv_production_company_heading"/>
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/tv_production_company_rv"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/edit_text_margin"
-                android:layout_marginEnd="@dimen/edit_text_margin"
-                android:layout_marginBottom="@dimen/edit_text_margin"/>
+                android:layout_height="wrap_content"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/edit_text_margin">
+                android:layout_marginTop="@dimen/edit_text_margin">
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/tv_coming_rv_id"
